Fix margin-jumping on playlist edit button
[#182439980]

--- a/src/components/playlists/style.module.less
+++ b/src/components/playlists/style.module.less
@@ -82,7 +82,7 @@
   display: flex;
   flex-direction: row;
 
-  & .playlistButton:not(:last-child) {
+  & .playlistButton:first-child {
     margin-right: 0.5rem;
   }
 }
